--- a/K8S/mssql-plat-depl.yaml
+++ b/K8S/mssql-plat-depl.yaml
@@ -25,8 +25,8 @@ spec:
             - name: SA_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: mssql
-                  key: SA_PASSWORD
+                  name: mssql2
+                  key: SA_PASSWORD2
           volumeMounts:
           - mountPath: /var/opt/mssql/data
             name: mssqldb
